fixed view width and footer problems

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                 <button>Call to Action</button>
     </section>
 
-    <div id='footer'>
+    
+    <span>
         <footer></footer>
-    </div>
+    </span>
+
 </body>
 </html>
